--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,42 @@ body {
     float: right;
     width: 25%;
 }
+#togetherforever {
+    width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+#angelsonmyside {
+    width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+#keepsinging {
+    width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+#takemetoyourheart {
+    width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+#wheneveryouneedsomebody {
+    width: 50%;
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+.thumbnail-1 {
+    padding: 20px 20px 20px 20px;
+    font-size: 5px;
+    border: 5px solid black;
+}
+.thumbnail-2 {
+    padding: 20px 20px 20px 20px;
+    font-size: 5px;
+}
