Cleaning up the code

--- a/styles.css
+++ b/styles.css
@@ -1,167 +1,148 @@
 head {
-    height: 5%;
-    width: auto;
-    top: 0;
-    width: 100%;
-    }
+  height: 5%;
+  width: auto;
+  top: 0;
+  width: 100%;
+}
 nav {
-    top: 0;
-    width: 100%;
-    display: flex;
-    }
+  top: 0;
+  width: 100%;
+  display: flex;
+}
 
 .search {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 #youtubelogo {
-    width: auto;
-    height: 24px;
-    align-self: flex-start;
+  width: auto;
+  height: 24px;
+  align-self: flex-start;
 }
 #searchinput {
-    width: 400px;
-    height: 24px;
+  width: 400px;
+  height: 24px;
 }
 #button {
-    width: auto;
-    height: 24px;
+  width: auto;
+  height: 24px;
 }
-#bell {
-    width: auto;
-    height: 24px;
-    margin-left: 1.2%;
-}
-#upload {
-    width: auto;
-    height: 24px;
-    margin-left: 1.2%;
-}
-#avatar {
-    width: auto;
-    height: 24px;
-    margin-left: 1.2%;
+#navitems {
+  width: auto;
+  height: 24px;
+  margin-left: 1.2%;
 }
 .video-container {
-    float: left;
-    width: 70%;
-    margin-left: 1.2%
+  float: left;
+  width: 70%;
+  margin-left: 1.2%;
 }
 .video {
-    margin-top: 3%;
+  margin-top: 3%;
 }
 #iframe {
-    width: 100%;
-    height: 70%;
+  width: 100%;
+  height: 70%;
 }
 .subvideo {
-    width: 100%    
+  width: 100%;
 }
 #title {
-    font-size: 20px;
-}
-.subvideo2 {
-    width: 100%
+  font-size: 20px;
 }
 .leftside {
-    display:inline-block;
+  display: inline-block;
 }
 #viewcount {
-    font-size: 15px;
-    color: rgb(107, 107, 107);
+  font-size: 15px;
+  color: rgb(107, 107, 107);
 }
 .rightside {
-    float: right;
-    }
+  float: right;
+}
 #like {
-    width: 24px; 
-    height: 24px;
-    }
+  width: 24px;
+  height: 24px;
+}
 #dislike {
-    width: 24px; 
-    height: 24px;
-    margin-left: 10px;
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
 }
 #share {
-    width: auto; 
-    height: 40px;
-    margin-left: 10px;
+  width: auto;
+  height: 40px;
+  margin-left: 10px;
 }
-.subvideo3 {
-    width:100%
-}
-
 
 .sidebar {
-    width: 25%;
-    float: right;
+  width: 25%;
+  float: right;
 }
 body {
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
 }
-
 
 .sidebar-container {
-    float: right;
-    width: 25%;
-    margin-top: 2.2%;
-    margin-right: 3%;
+  float: right;
+  width: 25%;
+  margin-top: 2.2%;
+  margin-right: 3%;
 }
 .thumbnail-1 {
-    width: 100%;
+  width: 100%;
 }
 #togetherforever {
-    width: 50%;
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 50%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 .description {
-    width:47%;
-    float: right;
-    font-size: 12px;
-    font-family: Roboto, Arial, sans-serif;
-    font-weight: 600;
+  width: 47%;
+  float: right;
+  font-size: 12px;
+  font-family: Roboto, Arial, sans-serif;
+  font-weight: 600;
 }
 #views {
-    font-size: 10px;
-    font-weight: 400;
+  font-size: 10px;
+  font-weight: 400;
 }
 .thumbnail-2 {
-    width: 100%;
+  width: 100%;
 }
 #angelsonmyside {
-    width: 50%;
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 50%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 .thumbnail-3 {
-    width: 100%;
+  width: 100%;
 }
 #keepsinging {
-    width: 50%;
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 50%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 .thumbnail-4 {
-    width: 100%;
+  width: 100%;
 }
 #takemetoyourheart {
-    width: 50%;
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 50%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 .thumbnail-5 {
-    width: 100%;
+  width: 100%;
 }
 #wheneveryouneedsomebody {
-    width: 50%;
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  width: 50%;
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
-
