Polishing the code

--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,34 @@
-head {
-  height: 5%;
-  width: auto;
-  top: 0;
-  width: 100%;
+body {
+  max-width: 100%;
+  font-family: "Roboto", sans-serif;
 }
 nav {
   top: 0;
   width: 100%;
   display: flex;
 }
-
-.search {
-  margin-left: auto;
-  margin-right: auto;
-}
 #youtubelogo {
   width: auto;
   height: 24px;
   align-self: flex-start;
 }
+.search {
+  margin-left: auto;
+  margin-right: auto;
+}
 #searchinput {
   width: 400px;
-  height: 24px;
+  height: 15px;
+}
+#searchbutton {
+  width: auto;
+  height: 18px;
 }
 #button {
   width: auto;
   height: 24px;
 }
-#navitems {
+.navitems {
   width: auto;
   height: 24px;
   margin-left: 1.2%;
@@ -57,6 +58,10 @@ nav {
   font-size: 15px;
   color: rgb(107, 107, 107);
 }
+#avatar {
+  width: 24px;
+  height: 24px;
+}
 .rightside {
   float: right;
 }
@@ -69,31 +74,25 @@ nav {
   height: 24px;
   margin-left: 10px;
 }
-#share {
+#shareIcon {
   width: auto;
-  height: 40px;
+  height: 24px;
   margin-left: 10px;
 }
-
-.sidebar {
-  width: 25%;
-  float: right;
+#subscribeIcon {
+  width: 75px;
+  height: 24px;
 }
-body {
-  width: 100%;
-  font-family: "Roboto", sans-serif;
-}
-
 .sidebar-container {
   float: right;
   width: 25%;
   margin-top: 2.2%;
   margin-right: 3%;
 }
-.thumbnail-1 {
+.thumbnail {
   width: 100%;
 }
-#togetherforever {
+.song {
   width: 50%;
   float: left;
   margin-right: 10px;
@@ -106,43 +105,7 @@ body {
   font-family: Roboto, Arial, sans-serif;
   font-weight: 600;
 }
-#views {
+.views {
   font-size: 10px;
   font-weight: 400;
-}
-.thumbnail-2 {
-  width: 100%;
-}
-#angelsonmyside {
-  width: 50%;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.thumbnail-3 {
-  width: 100%;
-}
-#keepsinging {
-  width: 50%;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.thumbnail-4 {
-  width: 100%;
-}
-#takemetoyourheart {
-  width: 50%;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-.thumbnail-5 {
-  width: 100%;
-}
-#wheneveryouneedsomebody {
-  width: 50%;
-  float: left;
-  margin-right: 10px;
-  margin-bottom: 10px;
 }
