--- a/styles.css
+++ b/styles.css
@@ -41,13 +41,36 @@ nav {
 }
 .video {
   margin-top: 3%;
+  flex-grow: 1;
 }
 #iframe {
   width: 100%;
   height: 450px;
 }
+.subvideo-container {
+  float: left;
+  width: 70%;
+  margin-left: 1.2%;
+  display: flex;
+  flex-direction: column;
+}
 .subvideo {
   width: 100%;
+  align-content: flex-start;
+}
+.subvideo2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+.subvideo3 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 #title {
   font-size: 20px;
@@ -60,8 +83,8 @@ nav {
   color: rgb(107, 107, 107);
 }
 #avatar {
-  width: 24px;
-  height: 24px;
+  width: 50px;
+  height: 50px;
 }
 .rightside {
   float: right;
@@ -69,9 +92,10 @@ nav {
 #like {
   width: 24px;
   height: 24px;
+ 
 }
 #dislike {
-  width: 24px;
+  width: auto;
   height: 24px;
   margin-left: 10px;
 }
