--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ nav {
   height: 24px;
   margin-left: 1.2%;
 }
+.main-body {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
 .video-container {
   float: left;
   width: 70%;
@@ -48,8 +53,7 @@ nav {
   height: 450px;
 }
 .subvideo-container {
-  float: left;
-  width: 70%;
+  width: 100%;
   margin-left: 1.2%;
   display: flex;
   flex-direction: column;
@@ -59,18 +63,18 @@ nav {
   align-content: flex-start;
 }
 .subvideo2 {
-  width: 100%;
+  width: 98.5%;
+  display: flex;
+  justify-content: space-between;
+}
+.subvideo3 {
+  width: 98.5%;
   display: flex;
   justify-content: space-between;
 }
 .break {
   flex-basis: 100%;
   height: 0;
-}
-.subvideo3 {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
 #title {
   font-size: 20px;
@@ -105,7 +109,7 @@ nav {
   margin-left: 10px;
 }
 #subscribe-icon {
-  width: 75px;
+  width: 55px;
   height: 24px;
 }
 .sidebar-container {
