--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ nav {
   justify-content: space-between;
 }
 .video-container {
-  float: left;
   width: 70%;
   margin-left: 1.2%;
 }
@@ -54,7 +53,6 @@ nav {
 }
 .subvideo-container {
   width: 100%;
-  margin-left: 1.2%;
   display: flex;
   flex-direction: column;
 }
@@ -64,8 +62,9 @@ nav {
 }
 .subvideo2 {
   width: 98.5%;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(60, 1fr);
+  grid-template-rows: 1fr 1fr;
 }
 .subvideo3 {
   width: 98.5%;
@@ -73,8 +72,9 @@ nav {
   justify-content: space-between;
 }
 .break {
-  flex-basis: 100%;
-  height: 0;
+  width: 100%;
+  height: 20px;
+  border-top: solid gray;
 }
 #title {
   font-size: 20px;
@@ -85,10 +85,14 @@ nav {
 #view-count {
   font-size: 15px;
   color: rgb(107, 107, 107);
+  grid-column: 53 / 61;
+  grid-row: 2 / 3;
 }
 #avatar {
-  width: 50px;
-  height: 50px;
+  width: 100px;
+  height: 100px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
 }
 .rightside {
   float: right;
@@ -108,9 +112,16 @@ nav {
   height: 24px;
   margin-left: 10px;
 }
+#username {
+  font-size: 15px;
+  grid-row: 1 / 2;
+  grid-column: 3 / 5;
+}
 #subscribe-icon {
-  width: 55px;
-  height: 24px;
+  width: 105px;
+  height: 32px;
+  grid-row: 2 / 3;
+  grid-column: 3 / 5;
 }
 .sidebar-container {
   float: right;
