--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ nav {
   width: 100%;
   display: flex;
 }
-#youtube-logo {
+.youtube-logo {
   width: auto;
   height: 24px;
   align-self: flex-start;
@@ -18,11 +18,11 @@ nav {
   margin-right: auto;
   width: 50%;
 }
-#search-input {
+.search-input {
   width: 75%;
   height: 24px;
 }
-#search-button {
+.search-button {
   width: auto;
   height: 18px;
 }
@@ -41,7 +41,7 @@ main {
   width: 70%;
   margin-left: 1.2%;
 }
-#iframe {
+.iframe {
   margin-top: 3%;
   flex-grow: 1;
   width: 100%;
@@ -75,38 +75,59 @@ main {
   margin-bottom: 10px;
   border-top: solid rgb(156, 155, 155, .25);
 }
-#title {
+.title {
   font-size: 20px;
 }
-#view-count {
+.view-count {
   font-size: 14px;
   color: rgb(107, 107, 107);
   grid-column:  6 / 10;
   grid-row: 2 / 3;
 }
-#avatar {
+.avatar {
   width: 100px;
   height: 100px;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
 .social-button {
-  width: auto;
-  height: 24px;
+  width: 40px;
+  height: auto;
   margin-left: 10px;
 }
-#username {
+.option-buttons1 {
+  width: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: transparent;
+  background-color: white;
+}
+.option-buttons {
+  display: flex;
+}
+.option-images {
+  width: 24px;
+  height: auto;
+}
+.option-texts {
+  padding-left: 5px;
+}
+.username {
   font-size: 15px;
   grid-row: 1 / 2;
   grid-column: 2 / 5;
 }
-#subscribe-icon {
+.subscribe-button {
   width: auto;
   height: 32px;
   grid-row: 2 / 3;
   grid-column: 2 / 5;
+  background-size: 100%;
+  background-image: url('img/subscribe-icon.png');
+  border: transparent;
 }
-/* sidebar container has 25% of the page */
+/*sidebar container has 25% of the page */
 .sidebar-container {
   display: flex;
   flex-direction: column;
